Changing page title of legal

--- a/djangocon/templates/legal_notices.html
+++ b/djangocon/templates/legal_notices.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Legal{% endblock title %}
+
 {% block content %}
     <div class="container_12 clearfix">
         <div class="grid_7 suffix_1">
