Title changed for talk proposal page. Tiny styling issue in colophon fixed.

--- a/djangocon/templates/talks/submit.html
+++ b/djangocon/templates/talks/submit.html
@@ -21,7 +21,7 @@
 {% block content %}
     <div class="container_12 clearfix">
         <div class="grid_7 suffix_1">
-            <h3>Submit a talk</h3>
+            <h3>Propose a talk</h3>
             {% if message %}
             <p>{{ message }}</p>
             {% endif %}
