--- a/djangocon/templates/legal_notices.html
+++ b/djangocon/templates/legal_notices.html
@@ -9,10 +9,10 @@
             
             <p>German law requires a <a href="http://en.wikipedia.org/wiki/Impressum#On_webpages" title="Impressum - Wikipedia, the free encyclopedia">statement of legal ownership</a> for documents, including websites.</p>
             
-            <p>Die Website djangocon.eu wird vom Deutschen Django-Verein e. V. i. G. betrieben.</p>
+            <p>Die Website djangocon.eu wird vom Deutschen Django-Verein e. V. betrieben.</p>
 
             <h4>Anschrift</h4>
-            {% filter linebreaks %}Deutscher Django-Verein e. V. i. G.
+            {% filter linebreaks %}Deutscher Django-Verein e. V.
             Erich-Zeigner-Allee 52
             04229 Leipzig
             Deutschland
@@ -24,15 +24,15 @@
             E-Mail: kontakt@django-de.org
 
             Vereinsregister: Amtsgericht Leipzig
-            Registernummer: in Gründung, wird in Kürze nachgereicht
+            Registernummer: VR 4814
             {% endfilter %}
 
             <h3>Haftungshinweis</h3>
-            {% filter linebreaks %}Trotz sorgfältiger inhaltlicher Kontrolle übernimmt der Deutsche Django-Verein e. V. i. G. keine Haftung oder Garantie für die Aktualität, Richtigkeit und Vollständigkeit der Informationen auf dieser Website. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich. Für die eingestellten Inhalte auf den Teilnehmerseiten sind die jeweiligen Teilnehmer selbst verantwortlich.
+            {% filter linebreaks %}Trotz sorgfältiger inhaltlicher Kontrolle übernimmt der Deutsche Django-Verein e. V. keine Haftung oder Garantie für die Aktualität, Richtigkeit und Vollständigkeit der Informationen auf dieser Website. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich. Für die eingestellten Inhalte auf den Teilnehmerseiten sind die jeweiligen Teilnehmer selbst verantwortlich.
 
-            Diese Website enthält Verweise auf Websites, die von Dritten eingerichtet wurden. Der Deutsche Django-Verein e. V. i. G. hat keinerlei Kontrolle über die Websites und die dort angebotenen Informationen, Waren oder Dienstleistungen. Der Deutsche Django-Verein e. V. i. G. übernimmt daher keinerlei Verantwortung, aus welchem Rechtsgrund auch immer, für den Inhalt der Websites Dritter.
+            Diese Website enthält Verweise auf Websites, die von Dritten eingerichtet wurden. Der Deutsche Django-Verein e. V. hat keinerlei Kontrolle über die Websites und die dort angebotenen Informationen, Waren oder Dienstleistungen. Der Deutsche Django-Verein e. V. übernimmt daher keinerlei Verantwortung, aus welchem Rechtsgrund auch immer, für den Inhalt der Websites Dritter.
 
-            Der Deutsche Django-Verein e. V. i. G. behält sich das Recht vor, die auf dieser Website angebotenen Informationen ohne gesonderte Ankündigung jederzeit zu verändern oder zu aktualisieren.
+            Der Deutsche Django-Verein e. V. behält sich das Recht vor, die auf dieser Website angebotenen Informationen ohne gesonderte Ankündigung jederzeit zu verändern oder zu aktualisieren.
 
             Für gegebenenfalls bestehende oder künftig entstehende Rechtsverhältnisse ist ausschließlich deutsches Recht anwendbar und sind nur deutsche Gerichte zuständig.
             {% endfilter %}
@@ -46,6 +46,7 @@
                 <li>Stephan Jäkel / <a href="http://twitter.com/younork">@younork</a></li>
                 <li>Idan Gazit / <a href="http://twitter.com/idangazit">@idangazit</a></li>
                 <li>Philipp Bosch / <a href="http://twitter.com/philippbosch">@philippbosch</a></li>
+                {# <li>Jesper Nøhr / <a href="http://twitter.com/jespern">@jespern</a></li> #}
             </ul>
             <p>You have three guesses as to which web development framework was used to build the site, and the first two don't count.</p>
         </div>
