Updated phone number

--- a/djangocon/templates/legal_notices.html
+++ b/djangocon/templates/legal_notices.html
@@ -19,8 +19,8 @@
 
             Der Verein wird vertreten durch den Vorstand Markus Zapke-Gründemann, Martin Mahner und Florian Schlachter.
 
-            Telefon: +49 30 577080922
-            Telefax: +49 3212 1007439
+            Telefon: +49 341 39 299 290 (Mo.-Fr. 16:00 Uhr bis 18:00 Uhr)
+            Telefax: +49 3212 100 74 39
             E-Mail: kontakt@django-de.org
 
             Vereinsregister: Amtsgericht Leipzig
