Added official date, woo

--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -28,7 +28,7 @@
         <div id="masthead">
             <a id="pony_home" href="{% url home %}">&nbsp;</a>
             <h1><a href="{% url home %}">djangocon.eu</a></h1>
-            <h2 id="when">May / June 2010</h2>
+            <h2 id="when">24-26 May, 2010</h2>
             <h2 id="where">Berlin</h2>
         </div>
     </div>
