Adding date announcement ribbon.

--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -30,6 +30,7 @@
             <h1><a href="{% url home %}">djangocon.eu</a></h1>
             <h2 id="when">May 24-26, 2010</h2>
             <h2 id="where">Berlin</h2>
+            <div id="announceribbon">24-26th May, Sprints 27-28</div>
         </div>
     </div>
     {% endblock header %}
