--- a/static/css/local.css
+++ b/static/css/local.css
@@ -70,7 +70,7 @@ a:visited {
 	overflow: hidden;
 	width: 100%;
 	background: url(../img/masthead_bg.png) repeat-x left 64px;
-	margin: 0 0 30px 0;
+	margin: 0;
 	padding: 0;
 	position: relative;
 }
@@ -81,79 +81,44 @@ a:visited {
 	overflow: hidden;
 	margin: 0 auto;
 	padding: 0;
-	/*background: url(../img/masthead_pony.png) no-repeat center 10px;*/
 	position: relative;
 }
 
 #masthead a#pony_home {
-	display: block;
-	position: absolute;
-	width: 244px;
-	height: 200px;
-	top: 0;
-	left: 358px;
-	margin: 0;
-	padding: 0;
-	border: 0;
-	background: url(../img/masthead_pony.png) no-repeat center top;
-	text-decoration: none;
+	float: right;
 }
 
 #masthead h1 {
-	position: absolute;
-	width: 363px;
+	margin-top: 64px;
 	height: 99px;
-	top: 63px;
-	margin: 0;
-	padding: 0;
+	width: 479px;
+	float: right;
 }
 
 #masthead h1 a {
 	display: block;
 	text-indent: -9999px;
-	width: 363px;
+	width: 479px;
 	height: 99px;
-	background: url(../img/djangocon_eu_masthead.png) no-repeat left 30px;
+	background: url(../img/masthead_berlin_2010.png) no-repeat right center;
 }
 
-#masthead h2 {
-	position: absolute;
-	color: #157DBC;
-	margin: 0;
-	padding: 0;
-	font-weight: normal;
-	text-transform: uppercase;
-	text-shadow: #fff 0 1px 0;
+#when {
+	font-weight: lighter;
+	font-size: 18px;
+	text-align: center;
+	margin-top: 5px;
+	padding-bottom: 15px;
+	margin-bottom: 15px;
+	color: #7ea1ad;
+	border-bottom: 1px solid rgba(126,161,173,0.2);
+	letter-spacing: 0.2em;
 }
 
-h2#where {
-	top: 103px;
-	font-size: 42px;
-	left: 648px;
-	letter-spacing: 0.1em;
-}
-
-h2#when {
-	display: none;
-	top: 85px;	
-	font-size: 15px;
-	color: #909ca2;
-	left: 650px;
-}
-
-div#announceribbon {
-	position: absolute;
-	top: -15px;
-	right: 200px;
-	width: 181px;
-	height: 131px;
-	text-indent: -9999px;
-	background: url(../img/dates_ribbon.png) no-repeat center top;
-}
-
-div#announceribbon:hover {
-	top: -10px;
-	-webkit-transition: top 100ms ease-out;
+#when em {
+	font-family: "sorts-mill-goudy-1","sorts-mill-goudy-2", Georgia, "Times New Roman", Times, serif;
+	color: #92bac8;
+	font-size: 0.9em;
 }
 
 #tagline_wrap {
