--- a/djangocon/templates/snippets/navigation.html
+++ b/djangocon/templates/snippets/navigation.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="{% url home %}">HOME</a></li>
         <li><a href="{% url about %}">ABOUT</a></li>
-        <li><a href="#">NEWS</a></li>
+        <li><a href="{% url blog_index %}">NEWS</a></li>
         <li><a href="{% url wiki %}">WIKI</a></li>
         <li><a href="{% url attendees_register %}">TICKETS</a></li>
         <li><a href="{% url venue %}">VENUE</a></li>
