--- a/djangocon/templates/about.html
+++ b/djangocon/templates/about.html
@@ -1,11 +1,35 @@
 {% extends "base.html" %}
-
+{% block title %}About{% endblock %}
 {% block content %}
     <div class="container_12 clearfix">
-        <div class="grid_12">
-            <h3>About</h3>
-            <h4>Lorem!</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="grid_12"><h3>About</h3></div>
+        <div class="grid_8">
+            <h4>DjangoCon Europe 2010</h4>
+            <p>
+                DjangoCon Europe is a Django conference that aims to bring together the community and provide a wide range of sessions, panels, lightning talks and showcases of Django usage within various businesses. 
+                We aim to educate and bring people together to turn new ideas into working code!<br />
+                <br />
+                The conference is organized by the German Django Association and is located in Berlin, Germany.<br />
+            </p>
+        </div>
+        <div class="grid_4">
+            <h4>The Conference Team</h4>
+            <h5>Jannis Leidel</h5>
+            <p>
+                <a href="http://twitter.com/jezdez">@jezdez</a> - Chairman
+            </p>
+            <h5>Stephan Jäkel</h5>
+            <p>
+                <a href="http://twitter.com/younork">@younork</a> - Organization
+            </p>
+            <h5>Philipp Bosch</h5>
+            <p>
+                <a href="http://twitter.com/philippbosch">@philippbosch</a> - Organization
+            </p>
+            <h5>Idan Gazit</h5>
+            <p>
+                <a href="http://twitter.com/idangazit">@idangazit</a> - Design / Graphics
+            </p>
         </div>
     </div>
 {% endblock content %}
