--- a/djangocon/templates/attendees/mail_registration_complete.html
+++ b/djangocon/templates/attendees/mail_registration_complete.html
@@ -5,7 +5,7 @@ We will send you a booking confirmation as soon as possible after we got the pay
 
 You can click here if you didn't got redirected to paypal:
 
-http://djangocon.eu/{% url attendees_paypal_redirect attendee.pk %}
+http://djangocon.eu{% url attendees_paypal_redirect attendee.pk %}
 
 If you have any problems, just contact us by mail (feedback@djangocon.eu) or #djangocon (freenode irc).
 
