--- a/djangocon/templates/attendees/payment_done.html
+++ b/djangocon/templates/attendees/payment_done.html
@@ -1,11 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container_12 clearfix" id="not_found">
+    <div class="container_12 clearfix">
         <div class="grid_6">
             <h3>Register for DjangoCon Europe 2010</h3>
-        </div>
-        <div class="grid_6">
             <h4>You got it!</h4>
             <p>You will receive a mail... Lorem!</p>
             <p>For now, you might <a href="{% url home %}">head home</a>.</p>
