--- a/djangocon/templates/snippets/navigation.html
+++ b/djangocon/templates/snippets/navigation.html
@@ -3,10 +3,10 @@
         <li><a href="{% url home %}">HOME</a></li>
         <li><a href="{% url about %}">ABOUT</a></li>
         <li><a href="{% url blog_index %}">NEWS</a></li>
-        <li><a href="{% url wiki %}">WIKI</a></li>
+        <li><a href="{% url wiki %}" target="_blank">WIKI</a></li>
         <li><a href="{% url attendees_register %}">TICKETS</a></li>
-        <li><a href="{% url venue %}">VENUE</a></li>
         <li><a href="{% url talks-submit %}">TALKS</a></li>
+        <li><a href="{% url venue %}">VENUE</a></li>
         <li><a href="{% url sponsoring %}">SPONSORING</a></li>
     </ul>
     <div class="clear">&nbsp;</div>
