Adding new homepage view.

--- a/djangocon/templates/home.html
+++ b/djangocon/templates/home.html
@@ -1,1 +1,35 @@
 {% extends "base.html" %}
+{% load gravatar %}
+{% block extra_js %}
+{#    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cycle.lite.1.0.min.js"></script>   #}
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cycle.all.min.js"></script>
+    
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.infieldlabel.js"></script>
+    <script type="text/javascript" charset="utf-8">
+        $(document).ready(function() {
+            // $('#tagline_wrap').cycle({ timeout: 5000 });
+            
+            $('#tagline_wrap').cycle({ 
+                timeout: 5000,
+                fx: 'scrollDownFade',
+                speedIn: 500,
+                speedOut: 250
+            });
+            
+            
+            $('label').addClass('infield').inFieldLabels();
+            $('#formerrors').fadeIn(1000);
+        });
+    </script>
+{% endblock extra_js %}
+
+{# {% block taglines %} #}
+{# <div id="tagline_wrap"> #}
+{#     {% for t in taglines %} #}
+{#         <div class="tagline"> #}
+{#             <img class="tagline_gravatar" width=48 height=48 src="{% gravatar_for_email t.subscriber.email 48 %}" alt="gravatar">                 #}
+{#             <div class="tagline_text">{{ t.tagline }}</div> #}
+{#         </div> #}
+{#     {% endfor %} #}
+{# </div> #}
+{# {% endblock taglines %} #}
