--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -46,12 +46,56 @@
             <h1><a href="{% url home %}">djangocon.eu - Berlin 2010</a></h1>
         </header>
     </div>
-
 	
-	<div class="container_12 clearfix" id="when">
-		24-26 May <em>(talks)</em>, 27-28 May <em>(sprints)</em>
+	{% block taglines %}
+	{% endblock taglines %}
+	
+	{# <div class="container_12 clearfix" id="when"> #}
+	{# 	24-26 May <em>(talks)</em>, 27-28 May <em>(sprints)</em> #}
+	{# </div> #}
+	
+	{% block nav %}
+	<div class="container_12 clearfix">
+		<nav class="clearfix" id="primarynav">
+			<ul class="nav clearfix">
+				<li id="nav_talks">
+					<a href="foo">
+						<h1>Talks</h1>
+						<h2>guidelines<br>submit</h2>						
+					</a>
+				</li>
+				<li id="nav_tickets">
+					<a href="foo">
+						<h1>Tickets</h1>
+						<h2>pricing<br>purchase</h2>					
+					</a>
+				</li>
+				<li id="nav_venue">
+					<a href="foo">
+						<h1>Venue</h1>
+						<h2>conference<br>hotels</h2>					
+					</a>
+				</li>
+				<li id="nav_blog">
+					<a href="foo">
+						<h1>Blog</h1>
+						<h2>announcements<br>news</h2>					
+					</a>
+				</li>
+				<li class="inactive">
+					<h1>Wiki</h1>
+					<h2>coming soon!</h2>
+				</li>
+				<li id="dates">
+					<h1>Conference: 24<sup>th</sup>-26<sup>th</sup> May, Sprints: 27<sup>th</sup>-28<sup>th</sup> May</h1>
+				</li>
+				
+			</ul>
+			
+			
+		</nav>
 	</div>
-	
+	{% endblock nav %}
 	
     {% endblock header %}
     
